# rankguard

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.js  index.html  pyproject.toml  styles.css  vercel.json
.github/workflows/: ci.yml
docs/: build-plan.md  idea-analysis.md
examples/: new_sitemap.xml  old_sitemap.xml
src/rankguard/: __init__.py  cli.py  io.py  matcher.py  models.py  normalize.py  report.py  validate.py
tests/: test_io.py  test_matcher.py  test_normalize.py  test_report.py  test_validate.py
