[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "rankguard"
version = "0.1.0"
description = "Local-first SEO migration guardrails for redirect maps, launch crawls, and ranking-risk reports."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "RankGuard contributors" }
]
keywords = ["seo", "redirects", "site-migration", "crawler", "search-console"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/anchitjaincfa/rankguard"
Issues = "https://github.com/anchitjaincfa/rankguard/issues"

[project.scripts]
rankguard = "rankguard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
